Search result page now have a link for an RSS version. Corrected paged mode style for search results. Corrected style for side-by-side posts on search results: now posts are aligned. Added a CompactSearch widget.

--- a/trunk/style.css
+++ b/trunk/style.css
@@ -472,7 +472,7 @@ body {
 
 .widgetMultiPost .subscribe {
 	background-color: transparent;
-	background-image: url(img/feed.png);
+	background-image: url(blogicons/feed.png);
 	background-repeat: no-repeat;
 	padding-left: 20px;
 	margin-top: .8em;
@@ -489,18 +489,21 @@ body {
 .widgetMultiPost .paged {
 	text-align: right;
 	font-weight: bold;
+	clear: both;
 }
 
 
-.search .post {
+#panel-search .post {
 	width: 45%;
 	float: left;
+	clear: left;
 	border: none;
 	margin-right: 1em;
 }
 
-
-
+#panel-search .alt {
+	clear: none;
+}
 
 /**
  ** End of Multipost (single page) related classes
@@ -780,11 +783,11 @@ body {
  **/
 
 
-input, textarea {
+.widgetCommentForm input, .widgetCommentForm textarea {
 	border: 1px solid;
 }
 
-input, textarea {
+.widgetCommentForm input, .widgetCommentForm textarea {
 	background: #efefff;
 	border-color: orange;
 }
@@ -1068,6 +1071,36 @@ input, textarea {
  ***********************************************************/
 
 
+
+
+/*********************************************
+ *********************************************
+ **
+ ** Compact Search related classes
+ **
+ **/
+
+
+.widgetCompactSearch #s {
+	margin-top: .5em;
+	padding: .5em;
+	padding-left: 25px;
+	width: 90%;
+	background: url(img/search.gif) no-repeat;
+	background-color: white;
+	border-top-color: grey;
+	border-left-color: grey;
+	border-right-color: lightgrey;
+	border-bottom-color: lightgrey;
+}
+
+
+
+/**
+ ** End of Closing Info related classes
+ **
+ *********************************************
+ *********************************************/
 
 
 
